kubernetes/infra-core/traefik-forward-auth/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
  namespace: kube-system
spec:
  forwardAuth:
    address: http://traefik-forward-auth.kube-system:4181
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
