kubernetes/infra-core/traefik-forward-auth/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: traefik-forward-auth
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      containers:
        - name: traefik-forward-auth
          image: ghcr.io/italypaleale/traefik-forward-auth:3
          ports:
          - containerPort: 4181
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
