kubernetes/infra-core/traefik-forward-auth/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
spec:
  ports:
  - name: http
    port: 4181
    targetPort: 4181
  selector:
    app: traefik-forward-auth
